--- a/demo/textAngular.com.html
+++ b/demo/textAngular.com.html
@@ -40,7 +40,7 @@
             <span class="text-xlg roboto">A Lightweight, Two-Way-Bound &amp; Totally <b class="text-red">Awesome</b> Angular.js Text-Editor</span>
         </div>
         <div class="container lighter">
-            <div text-angular ng-model="htmlContent" name="demo-editor" ta-text-editor-class="border-around container" ta-html-editor-class="border-around"></div>
+            <div text-angular default-wrapping="false" ng-model="htmlContent" name="demo-editor" ta-text-editor-class="border-around container" ta-html-editor-class="border-around"></div>
         </div>
         <br>
         <div class="container text-center lighter border-around">
@@ -71,7 +71,7 @@
     <script type="text/javascript">
     angular.module("textAngularDemo", ['textAngular'])
     .controller("demoController", function demoController($scope) {
-      $scope.htmlContent = '<h2>Try me!</h2><p>textAngular is a super cool WYSIWYG Text Editor directive for AngularJS</p><p><b>Features:</b></p><ol><li>Automatic Seamless Two-Way-Binding</li><li style="color: blue;">Super Easy <b>Theming</b> Options</li><li>Simple Editor Instance Creation</li><li>Safely Parses Html for Custom Toolbar Icons</li><li>Doesn&apos;t Use an iFrame</li><li>Works with Firefox, Chrome, and IE9+</li></ol><p><b>Code at GitHub:</b> <a href="https://github.com/fraywing/textAngular">Here</a> </p>';
+      $scope.htmlContent = '';
     });
     </script>
 </body>
